[metadata]
name = pyautoeios
version = attr: src.pyautoeios.__VERSION__
author = Brett Moan
author-email = brett.moan@gmail.com
home-page = https://github.com/BrettMoan/pyautoeios
description = automate an old school classic
long-description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause
license-file = LICENSE
platform = any
keywords = {keywords}
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Environment :: Win32 (MS Windows)
    Operating System :: Microsoft :: Windows :: Windows 10
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Games/Entertainment
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Scientific/Engineering :: Image Processing
project_urls = 
    Bug Tracker = https://github.com/BrettMoan/pyautoeios/issues
    Changelog = https://github.com/BrettMoan/pyautoeios/blob/master/CHANGELOG.md

include_package_data = True

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src